--- a/Level1/Unit1/QUIZ2/index.html
+++ b/Level1/Unit1/QUIZ2/index.html
@@ -149,9 +149,8 @@
             z-index: 999;
         }
 
-        .question-image {
-            max-width: 100%;
-            height: auto;
+        h%;
+            height: auto; max-height: 300px;
             margin-bottom: 15px;
         }
     </style>
