--- a/Level1/Unit1/QUIZ2/index.html
+++ b/Level1/Unit1/QUIZ2/index.html
@@ -86,7 +86,8 @@
             font-size: 1.2em; /* Ajusta o tamanho dos ícones */
             margin-right: 5px; /* Espaço entre o ícone e o texto */
             vertical-align: middle; /* Alinha o ícone ao texto */
-        }
+           
+}
 
         .read-btn:hover {
             background-color: #FB8C00;
@@ -148,13 +149,6 @@
             background-color: rgba(0, 0, 0, 0.5);
             z-index: 999;
         }
-
-        .question-image {
-            max-width: 100%;
-            height: auto;
-            max-height: 250px;
-            margin-bottom: 15px;
-        }
     </style>
 </head>
 <body>
@@ -195,85 +189,53 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
 <script>
     // Configuração do Firebase
-const firebaseConfig = {
-    apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
-    authDomain: "hannahenglishcourse.firebaseapp.com",
-    projectId: "hannahenglishcourse",
-    storageBucket: "hannahenglishcourse.appspot.com",
-    messagingSenderId: "449818788486",
-    appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-    measurementId: "G-07VVJG9LRS",
-    databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
-};
+    const firebaseConfig = {
+        apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+        authDomain: "hannahenglishcourse.firebaseapp.com",
+        projectId: "hannahenglishcourse",
+        storageBucket: "hannahenglishcourse.appspot.com",
+        messagingSenderId: "449818788486",
+        appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+        measurementId: "G-07VVJG9LRS",
+        databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+    };
 
-// Inicializa o Firebase
-firebase.initializeApp(firebaseConfig);
+    // Inicializa o Firebase
+    firebase.initializeApp(firebaseConfig);
 
-    $1
-let answeredQuestions = [];
-let userAnswers = {};
-let speechSynthesisUtterance = null;
+// Função para exibir o botão PDF se o papel for 'professor' ou 'proprietario'
+function displayPdfButton(role) {
+    if (role === 'professor' || role === 'proprietario') {
+        const pdfButton = document.createElement('button');
+        pdfButton.className = 'pdf-btn';
+        pdfButton.id = 'pdf-btn';
+        pdfButton.textContent = 'Generate PDF';
+        pdfButton.onclick = generatePDF;
+        document.querySelector('.btn-group').appendChild(pdfButton);
+    }
+}
+
+// Obter o papel do usuário e exibir o botão condicionalmente
+firebase.auth().onAuthStateChanged(function(user) {
+    if (user) {
+        // Substitua o caminho abaixo conforme necessário para buscar o papel do usuário
+        firebase.database().ref('usuarios/' + user.uid + '/role').once('value').then((snapshot) => {
+            const role = snapshot.val();
+            displayPdfButton(role);
+        });
+    }
+});
+
+    let currentQuestionIndex = 0;
+    let questions = [];
     let answeredQuestions = [];
     let userAnswers = {}; // Objeto para armazenar as respostas do usuário
     let speechSynthesisUtterance = null;
 
-    async function generatePDF() {
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
-
-    const logo = new Image();
-    logo.src = 'Logo.png';
-
-    doc.addImage(logo, 'PNG', 90, 10, 30, 30);
-
-    doc.setFontSize(20);
-    doc.text('Hannah Quiz', 105, 50, null, null, 'center');
-
-    doc.setFontSize(12);
-    doc.text('Name: ____________________________________', 20, 70);
-    doc.text('Date: _______________', 150, 70);
-
-    let yPosition = 90;
-
-    questions.forEach((q, index) => {
-        doc.setFontSize(14);
-        let questionText = `${index + 1}. ${q.question}`;
-        let textLines = doc.splitTextToSize(questionText, 180);
-        let questionHeight = textLines.length * 10;
-
-        if (yPosition + questionHeight > 280) {
-            doc.addPage();
-            yPosition = 20;
-        }
-
-        doc.text(textLines, 20, yPosition);
-        yPosition += questionHeight;
-
-        q.answers.forEach(answer => {
-            doc.setFontSize(12);
-            let answerText = answer;
-            let answerLines = doc.splitTextToSize(answerText, 180);
-            let answerHeight = answerLines.length * 10;
-
-            if (yPosition + answerHeight > 280) {
-                doc.addPage();
-                yPosition = 20;
-            }
-
-            doc.text(answerLines, 30, yPosition);
-            yPosition += answerHeight;
-        });
-
-        yPosition += 10;
-    });
-
-    doc.save('QuizQuestionsWithLogo.pdf');
-}
-}
-
-$1
+    async function loadQuestions() {
         const response = await fetch('questions.txt');
         const text = await response.text();
         const lines = text.split('\n');
@@ -286,7 +248,7 @@ $1
                     questions.push(currentQuestion);
                 }
                 currentQuestion = { question: line.substring(2).trim(), answers: [], correct: '' };
-            } else if (/^[A-Z]\./.test(line)) {
+            } else if (/^[A-Z]\./.test(line)) {  
                 currentQuestion.answers.push(line);
             } else if (line.startsWith('Correct:')) {
                 currentQuestion.correct = line.split(':')[1].trim();
@@ -301,29 +263,51 @@ $1
         displayQuestion();
     }
 
-    $1
+   function displayQuestion() {
+    const container = document.getElementById('quiz-container');
+    container.innerHTML = ''; // Limpa a área onde a pergunta é exibida
+
+    const q = questions[currentQuestionIndex]; // Pega a pergunta atual
+    const questionDiv = document.createElement('div'); // Cria um contêiner para a pergunta
+    questionDiv.classList.add('question');
+
+    // Adiciona o texto da pergunta
+    const questionText = document.createElement('p');
+    questionText.id = 'question-text';
+    questionText.innerText = `${currentQuestionIndex + 1}. ${q.question}`;
+    questionDiv.appendChild(questionText); // Adiciona o texto da pergunta ao contêiner
+
     // Adiciona a imagem correspondente à questão
-    const questionImage = document.createElement('img');
-    questionImage.src = `imagens/imagem${currentQuestionIndex + 1}.jpeg`;
-    questionImage.alt = `Imagem para questão ${currentQuestionIndex + 1}`;
-    questionImage.classList.add('question-image');
-    questionDiv.appendChild(questionImage);
+    const questionImage = document.createElement('img'); // Cria um elemento de imagem
+    questionImage.src = `../../../imagens/imagem${currentQuestionIndex + 1}.jpeg`; // Define o caminho da imagem
+    questionImage.alt = `Imagem da Questão ${currentQuestionIndex + 1}`; // Texto alternativo para a imagem
+    questionImage.style.width = '300px'; // Largura da imagem
+    questionImage.style.height = '200px'; // Altura da imagem
+    questionImage.style.marginTop = '10px'; // Espaço entre a pergunta e a imagem
+    questionDiv.appendChild(questionImage); // Adiciona a imagem ao contêiner da pergunta
 
-    container.appendChild(questionDiv);
+    // Adiciona as opções de resposta
+    q.answers.forEach((answer) => {
+        const answerLabel = document.createElement('label');
+        answerLabel.innerHTML = `<input type="radio" name="question${currentQuestionIndex}" value="${answer[0]}" onclick="checkAnswer(this, '${answer[0]}')"> ${answer}`;
+        questionDiv.appendChild(answerLabel); // Adiciona cada opção de resposta ao contêiner
+    });
 
-        // Restaura a resposta do usuário, se houver
-        if (userAnswers[currentQuestionIndex]) {
-            const savedAnswer = userAnswers[currentQuestionIndex];
-            const radioButtons = document.getElementsByName(`question${currentQuestionIndex}`);
-            radioButtons.forEach((radio) => {
-                if (radio.value === savedAnswer) {
-                    radio.checked = true;
-                }
-            });
-        }
+    container.appendChild(questionDiv); // Adiciona todo o contêiner ao HTML
 
-        updateNavigationButtons();
+    // Restaura a resposta do usuário, se houver
+    if (userAnswers[currentQuestionIndex]) {
+        const savedAnswer = userAnswers[currentQuestionIndex];
+        const radioButtons = document.getElementsByName(`question${currentQuestionIndex}`);
+        radioButtons.forEach((radio) => {
+            if (radio.value === savedAnswer) {
+                radio.checked = true; // Marca a resposta previamente escolhida pelo usuário
+            }
+        });
     }
+
+    updateNavigationButtons(); // Atualiza os botões de navegação (Próximo e Anterior)
+}
 
     function updateNavigationButtons() {
         document.getElementById('prev-btn').disabled = currentQuestionIndex === 0;
@@ -346,42 +330,55 @@ $1
         }
     }
 
-    function checkAnswer(radioElement, selectedAnswer) {
-        const q = questions[currentQuestionIndex];
-        const feedbackDiv = document.getElementById('feedback');
-        const feedbackImg = document.getElementById('feedback-img');
-        const feedbackAudio = document.getElementById('feedback-audio');
-        const gifContainer = document.querySelector('.gif-container');
+function toggleButtons(state) {
+    document.getElementById('prev-btn').disabled = !state;
+    document.getElementById('next-btn').disabled = !state;
+    document.getElementById('read-btn').disabled = !state;
 
-        // Salva a resposta do usuário
-        userAnswers[currentQuestionIndex] = selectedAnswer;
+    const radios = document.querySelectorAll('input[type="radio"]');
+    radios.forEach(radio => radio.disabled = !state);
+}
 
-        if (selectedAnswer === q.correct) {
-            feedbackImg.src = 'certo.gif';
-            feedbackAudio.src = 'certo.mp3';
-            feedbackAudio.play();
-            feedbackDiv.style.display = 'block';
-            gifContainer.style.display = 'block';
-            answeredQuestions[currentQuestionIndex] = true;
+   function checkAnswer(radioElement, selectedAnswer) {
+    const q = questions[currentQuestionIndex];
+    const feedbackDiv = document.getElementById('feedback');
+    const feedbackImg = document.getElementById('feedback-img');
+    const feedbackAudio = document.getElementById('feedback-audio');
+    const gifContainer = document.querySelector('.gif-container');
 
-            setTimeout(() => {
-                hideGIF();
-                showNextQuestion();
-                checkCompletion();
-            }, 2000);
-        } else {
-            feedbackImg.src = 'errado.gif';
-            feedbackAudio.src = 'errado.mp3';
-            feedbackAudio.play();
-            feedbackDiv.style.display = 'block';
-            gifContainer.style.display = 'block';
+    // Salva a resposta do usuário
+    userAnswers[currentQuestionIndex] = selectedAnswer;
 
-            setTimeout(() => {
-                hideGIF();
-                radioElement.checked = false;
-            }, 2000);
-        }
+    toggleButtons(false); // Bloqueia os botões
+
+    if (selectedAnswer === q.correct) {
+        feedbackImg.src = 'certo.gif';
+        feedbackAudio.src = 'certo.mp3';
+        feedbackAudio.play();
+        feedbackDiv.style.display = 'block';
+        gifContainer.style.display = 'block';
+        answeredQuestions[currentQuestionIndex] = true;
+
+        setTimeout(() => {
+            hideGIF();
+            toggleButtons(true); // Desbloqueia os botões
+            showNextQuestion();
+            checkCompletion();
+        }, 2000);
+    } else {
+        feedbackImg.src = 'errado.gif';
+        feedbackAudio.src = 'errado.mp3';
+        feedbackAudio.play();
+        feedbackDiv.style.display = 'block';
+        gifContainer.style.display = 'block';
+
+        setTimeout(() => {
+            hideGIF();
+            toggleButtons(true); // Desbloqueia os botões
+            radioElement.checked = false;
+        }, 2000);
     }
+}
 
     function hideGIF() {
         const gifContainer = document.querySelector('.gif-container');
@@ -405,6 +402,7 @@ $1
     function checkCompletion() {
         if (answeredQuestions.every((answered) => answered)) {
             showModal();
+            ensureUserIsAuthenticated(updateNextPhase);
         }
     }
 
@@ -418,32 +416,121 @@ $1
         document.getElementById('overlay').style.display = 'none';
     }
 
-    // Função para exibir o botão PDF se o papel for 'professor' ou 'proprietario'
-function displayPdfButton(role) {
-    if (role === 'professor' || role === 'proprietario') {
-        const pdfButton = document.createElement('button');
-        pdfButton.className = 'pdf-btn';
-        pdfButton.id = 'pdf-btn';
-        pdfButton.textContent = 'Generate PDF';
-        pdfButton.onclick = generatePDF;
-        document.querySelector('.btn-group').appendChild(pdfButton);
-    }
-}
-
-// Obter o papel do usuário e exibir o botão condicionalmente
-firebase.auth().onAuthStateChanged(function(user) {
-    if (user) {
-        // Substitua o caminho abaixo conforme necessário para buscar o papel do usuário
-        firebase.database().ref('usuarios/' + user.uid + '/role').once('value').then((snapshot) => {
-            const role = snapshot.val();
-            displayPdfButton(role);
+    function ensureUserIsAuthenticated(callback) {
+        firebase.auth().onAuthStateChanged(function(user) {
+            if (user) {
+                callback(user.uid);
+            } else {
+                console.error("Usuário não autenticado");
+            }
         });
     }
-});
-    }
-});
 
-$1
+    async function updateNextPhase(userId) {
+        const currentPhase = getPhaseFromURL(); 
+        const { level, unit } = getLevelAndUnitFromURL(); 
+        const dbRef = firebase.database().ref(`usuarios/${userId}/progresso`);
+
+        try {
+            if (currentPhase === "end") {
+                // Criar nova Level
+                const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+                await dbRef.child(nextLevel).set({});
+                console.log(`Level ${nextLevel} criada.`);
+
+                // Criar Unit1/fase1 como true dentro da nova Level
+                await dbRef.child(`${nextLevel}/Unit1/fase1`).set(true);
+                console.log(`Unit1/fase1 criada como true dentro de ${nextLevel}.`);
+            } else if (currentPhase === "last") {
+                const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                // Primeiro, cria a nova Unit
+                await dbRef.child(`${level}/${nextUnit}`).set({});
+                console.log(`Unit ${nextUnit} criada dentro de ${level}.`);
+
+                // Em seguida, adiciona a fase1 como true dentro da nova Unit
+                await dbRef.child(`${level}/${nextUnit}/fase1`).set(true);
+                console.log(`Fase1 marcada como true dentro de ${nextUnit}.`);
+            } else {
+                const nextPhase = parseInt(currentPhase) + 1;
+                await dbRef.child(`${level}/${unit}`).update({ 
+                    [`fase${currentPhase}`]: true, 
+                    [`fase${nextPhase}`]: true 
+                });
+                console.log(`Fase ${currentPhase} marcada como concluída e fase ${nextPhase} liberada.`);
+            }
+        } catch (error) {
+            console.error("Erro ao atualizar o progresso da fase:", error);
+        }
+    }
+
+    function getPhaseFromURL() {
+        const params = new URLSearchParams(window.location.search);
+        return params.get('fase'); 
+    }
+
+    function getLevelAndUnitFromURL() {
+        const url = window.location.pathname;
+        const parts = url.split('/');
+        const level = parts[1];
+        const unit = parts[2];
+        return { level, unit };
+    }
+
+    function generatePDF() {
+        const { jsPDF } = window.jspdf;
+        const doc = new jsPDF();
+
+        const logo = new Image();
+        logo.src = 'Logo.png'; 
+
+        doc.addImage(logo, 'PNG', 90, 10, 30, 30); 
+
+        doc.setFontSize(20);
+        doc.text('Hannah Quiz', 105, 50, null, null, 'center');
+
+        doc.setFontSize(12);
+        doc.text('Name: ____________________________________', 20, 70);
+        doc.text('Date: _______________', 150, 70);
+
+        let yPosition = 90;
+
+        questions.forEach((q, index) => {
+            doc.setFontSize(14);
+            let questionText = `${index + 1}. ${q.question}`;
+            let textLines = doc.splitTextToSize(questionText, 180);  
+            let questionHeight = textLines.length * 10; 
+
+            if (yPosition + questionHeight > 280) {
+                doc.addPage();
+                yPosition = 20;
+            }
+
+            doc.text(textLines, 20, yPosition);
+            yPosition += questionHeight;
+
+            q.answers.forEach(answer => {
+                doc.setFontSize(12);
+                let answerText = answer;
+                let answerLines = doc.splitTextToSize(answerText, 180);
+                let answerHeight = answerLines.length * 10;
+
+                if (yPosition + answerHeight > 280) {
+                    doc.addPage();
+                    yPosition = 20;
+                }
+
+                doc.text(answerLines, 30, yPosition);
+                yPosition += answerHeight;
+            });
+
+            yPosition += 10; 
+        });
+
+        doc.save('QuizQuestionsWithLogo.pdf');
+    }
+
+    window.onload = loadQuestions;
+
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
