--- a/Level1/Unit1/QUIZ2/index.html
+++ b/Level1/Unit1/QUIZ2/index.html
@@ -279,7 +279,7 @@ firebase.auth().onAuthStateChanged(function(user) {
 
     // Adiciona a imagem correspondente à questão
     const questionImage = document.createElement('img'); // Cria um elemento de imagem
-    questionImage.src = `../../../imagens/imagem${currentQuestionIndex + 1}.jpeg`; // Define o caminho da imagem
+    questionImage.src = `imagens/imagem${currentQuestionIndex + 1}.jpeg`; // Define o caminho da imagem
     questionImage.alt = `Imagem da Questão ${currentQuestionIndex + 1}`; // Texto alternativo para a imagem
     questionImage.style.width = '300px'; // Largura da imagem
     questionImage.style.height = '200px'; // Altura da imagem
