--- a/Level1/Unit1/QUIZ2/index.html
+++ b/Level1/Unit1/QUIZ2/index.html
@@ -477,57 +477,70 @@ function toggleButtons(state) {
     }
 
     function generatePDF() {
-        const { jsPDF } = window.jspdf;
-        const doc = new jsPDF();
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
 
-        const logo = new Image();
-        logo.src = 'Logo.png'; 
+    // Adiciona a logo no topo do PDF
+    const logo = new Image();
+    logo.src = 'Logo.png'; 
+    doc.addImage(logo, 'PNG', 90, 10, 30, 30); 
 
-        doc.addImage(logo, 'PNG', 90, 10, 30, 30); 
+    // Adiciona o título do PDF
+    doc.setFontSize(20);
+    doc.text('Hannah Quiz', 105, 50, null, null, 'center');
 
-        doc.setFontSize(20);
-        doc.text('Hannah Quiz', 105, 50, null, null, 'center');
+    // Adiciona o espaço para nome e data
+    doc.setFontSize(12);
+    doc.text('Name: ____________________________________', 20, 70);
+    doc.text('Date: _______________', 150, 70);
 
-        doc.setFontSize(12);
-        doc.text('Name: ____________________________________', 20, 70);
-        doc.text('Date: _______________', 150, 70);
+    let yPosition = 90; // Define a posição inicial para adicionar as perguntas e imagens
 
-        let yPosition = 90;
+    questions.forEach((q, index) => {
+        // Adiciona o texto da pergunta ao PDF
+        doc.setFontSize(14);
+        let questionText = `${index + 1}. ${q.question}`;
+        let textLines = doc.splitTextToSize(questionText, 180);  
+        let questionHeight = textLines.length * 10; 
 
-        questions.forEach((q, index) => {
-            doc.setFontSize(14);
-            let questionText = `${index + 1}. ${q.question}`;
-            let textLines = doc.splitTextToSize(questionText, 180);  
-            let questionHeight = textLines.length * 10; 
+        // Verifica se precisa adicionar uma nova página para caber a pergunta e a imagem
+        if (yPosition + questionHeight + 60 > 280) { // 60 para incluir a altura da imagem
+            doc.addPage();
+            yPosition = 20;
+        }
 
-            if (yPosition + questionHeight > 280) {
+        doc.text(textLines, 20, yPosition);
+        yPosition += questionHeight;
+
+        // Adiciona a imagem correspondente à questão
+        const img = new Image();
+        img.src = `imagens/imagem${index + 1}.jpeg`; // Define o caminho da imagem
+
+        doc.addImage(img, 'JPEG', 20, yPosition, 60, 40); // Adiciona a imagem no PDF
+        yPosition += 50; // Ajusta a posição vertical para a próxima pergunta
+
+        // Adiciona as opções de resposta ao PDF
+        q.answers.forEach(answer => {
+            doc.setFontSize(12);
+            let answerText = answer;
+            let answerLines = doc.splitTextToSize(answerText, 180);
+            let answerHeight = answerLines.length * 10;
+
+            if (yPosition + answerHeight > 280) {
                 doc.addPage();
                 yPosition = 20;
             }
 
-            doc.text(textLines, 20, yPosition);
-            yPosition += questionHeight;
-
-            q.answers.forEach(answer => {
-                doc.setFontSize(12);
-                let answerText = answer;
-                let answerLines = doc.splitTextToSize(answerText, 180);
-                let answerHeight = answerLines.length * 10;
-
-                if (yPosition + answerHeight > 280) {
-                    doc.addPage();
-                    yPosition = 20;
-                }
-
-                doc.text(answerLines, 30, yPosition);
-                yPosition += answerHeight;
-            });
-
-            yPosition += 10; 
+            doc.text(answerLines, 30, yPosition);
+            yPosition += answerHeight;
         });
 
-        doc.save('QuizQuestionsWithLogo.pdf');
-    }
+        yPosition += 10; // Espaço adicional entre as perguntas
+    });
+
+    // Salva o PDF gerado
+    doc.save('QuizQuestionsWithImages.pdf');
+}
 
     window.onload = loadQuestions;
 
