--- a/Level1/Unit1/QUIZ2/index.html
+++ b/Level1/Unit1/QUIZ2/index.html
@@ -516,7 +516,7 @@ function toggleButtons(state) {
 
             // Adiciona a imagem correspondente à questão
             const img = new Image();
-            img.src = `../../../imagens/imagem${index + 1}.jpeg`;
+            img.src = `imagens/imagem${index + 1}.jpeg`;
 
             img.onload = function() {
                 doc.addImage(img, 'JPEG', 20, yPosition, 60, 40);
