--- a/Level1/Unit1/QUIZ2/index.html
+++ b/Level1/Unit1/QUIZ2/index.html
@@ -496,7 +496,7 @@ function toggleButtons(state) {
         doc.text('Name: ____________________________________', 20, 70);
         doc.text('Date: _______________', 150, 70);
 
-        let yPosition = 90;
+        let yPosition = 85; // Define a posição inicial para adicionar as perguntas e imagens, ajustada para menos espaçamento
 
         // Função que processa a próxima pergunta
         const processQuestion = (index) => {
@@ -512,15 +512,16 @@ function toggleButtons(state) {
             doc.setFontSize(14);
             let questionText = `${index + 1}. ${q.question}`;
             let textLines = doc.splitTextToSize(questionText, 180);
-            let questionHeight = textLines.length * 10;
+            let questionHeight = textLines.length * 8; // Altura de linha ajustada para reduzir espaçamento
 
             // Prepara a imagem
             const img = new Image();
             img.src = `imagens/imagem${index + 1}.jpeg`;
-            let imageHeight = 50;
+            let imageHeight = 30; // Reduzi a altura da imagem em 40%
+            let imageWidth = 36; // Mantive a proporção, reduzindo também a largura
 
             // Calcula a altura necessária para a pergunta, imagem e respostas
-            let totalHeight = questionHeight + imageHeight + (q.answers.length * 10) + 20;
+            let totalHeight = questionHeight + imageHeight + (q.answers.length * 8) + 10;
 
             // Verifica se precisa adicionar uma nova página
             if (yPosition + totalHeight > 280) {
@@ -530,19 +531,19 @@ function toggleButtons(state) {
 
             // Adiciona o texto da pergunta
             doc.text(textLines, 20, yPosition);
-            yPosition += questionHeight + 10; // Adiciona um espaço entre o texto e a imagem
+            yPosition += questionHeight + 5; // Adiciona um pequeno espaço entre o texto e a imagem
 
             // Adiciona a imagem correspondente à questão
             img.onload = function() {
-                doc.addImage(img, 'JPEG', 20, yPosition, 60, 40);
-                yPosition += imageHeight + 10;
+                doc.addImage(img, 'JPEG', 20, yPosition, imageWidth, imageHeight);
+                yPosition += imageHeight + 5;
 
                 // Adiciona as alternativas de resposta
                 q.answers.forEach(answer => {
                     doc.setFontSize(12);
                     let answerText = answer;
                     let answerLines = doc.splitTextToSize(answerText, 180);
-                    let answerHeight = answerLines.length * 10;
+                    let answerHeight = answerLines.length * 8; // Altura ajustada para reduzir o espaçamento
 
                     if (yPosition + answerHeight > 280) {
                         doc.addPage();
@@ -550,10 +551,10 @@ function toggleButtons(state) {
                     }
 
                     doc.text(answerLines, 30, yPosition);
-                    yPosition += answerHeight + 5; // Adiciona um espaço entre cada alternativa
+                    yPosition += answerHeight + 3; // Menor espaçamento entre cada alternativa
                 });
 
-                yPosition += 10; // Espaçamento adicional entre perguntas
+                yPosition += 5; // Espaçamento adicional reduzido entre perguntas
 
                 // Processa a próxima pergunta
                 processQuestion(index + 1);
@@ -561,7 +562,7 @@ function toggleButtons(state) {
 
             img.onerror = function() {
                 console.error('Erro ao carregar a imagem: ', img.src);
-                yPosition += imageHeight + 10; // Pula o espaço da imagem se não for carregada
+                yPosition += imageHeight + 5; // Pula o espaço da imagem se não for carregada
 
                 // Processa a próxima pergunta mesmo sem a imagem
                 processQuestion(index + 1);
