--- a/Level1/Unit1/QUIZ2/index.html
+++ b/Level1/Unit1/QUIZ2/index.html
@@ -496,7 +496,7 @@ function toggleButtons(state) {
         doc.text('Name: ____________________________________', 20, 70);
         doc.text('Date: _______________', 150, 70);
 
-        let yPosition = 85; // Define a posição inicial para adicionar as perguntas e imagens, ajustada para menos espaçamento
+        let yPosition = 85; // Define a posição inicial para adicionar as perguntas e imagens
 
         // Função que processa a próxima pergunta
         const processQuestion = (index) => {
@@ -521,7 +521,7 @@ function toggleButtons(state) {
             let imageWidth = 36; // Mantive a proporção, reduzindo também a largura
 
             // Calcula a altura necessária para a pergunta, imagem e respostas
-            let totalHeight = questionHeight + imageHeight + (q.answers.length * 8) + 10;
+            let totalHeight = questionHeight + imageHeight + (Math.ceil(q.answers.length / 2) * 10) + 20;
 
             // Verifica se precisa adicionar uma nova página
             if (yPosition + totalHeight > 280) {
@@ -538,11 +538,15 @@ function toggleButtons(state) {
                 doc.addImage(img, 'JPEG', 20, yPosition, imageWidth, imageHeight);
                 yPosition += imageHeight + 5;
 
-                // Adiciona as alternativas de resposta
-                q.answers.forEach(answer => {
+                // Adiciona as alternativas de resposta em duas colunas
+                let column1X = 20;
+                let column2X = 110; // Define a posição X para a segunda coluna
+                let currentColumn = 1;
+
+                q.answers.forEach((answer, i) => {
                     doc.setFontSize(12);
                     let answerText = answer;
-                    let answerLines = doc.splitTextToSize(answerText, 180);
+                    let answerLines = doc.splitTextToSize(answerText, 80); // Cada coluna terá uma largura de 80
                     let answerHeight = answerLines.length * 8; // Altura ajustada para reduzir o espaçamento
 
                     if (yPosition + answerHeight > 280) {
@@ -550,11 +554,21 @@ function toggleButtons(state) {
                         yPosition = 20;
                     }
 
-                    doc.text(answerLines, 30, yPosition);
-                    yPosition += answerHeight + 3; // Menor espaçamento entre cada alternativa
+                    // Define a posição X dependendo da coluna atual
+                    let xPosition = currentColumn === 1 ? column1X : column2X;
+
+                    doc.text(answerLines, xPosition, yPosition);
+
+                    // Alterna entre as colunas
+                    if (currentColumn === 1) {
+                        currentColumn = 2;
+                    } else {
+                        currentColumn = 1;
+                        yPosition += answerHeight + 5; // Move para a próxima linha após preencher as duas colunas
+                    }
                 });
 
-                yPosition += 5; // Espaçamento adicional reduzido entre perguntas
+                yPosition += 10; // Espaçamento adicional reduzido entre perguntas
 
                 // Processa a próxima pergunta
                 processQuestion(index + 1);
