--- a/Level1/Unit1/MemoryGame/index.html
+++ b/Level1/Unit1/MemoryGame/index.html
@@ -100,7 +100,7 @@
         }
 
         .card-front {
-            background-color: #3498db;
+            background-color: #c4ff00;
             color: white;
         }
 
