--- a/Level1/Unit1/MemoryGame/index.html
+++ b/Level1/Unit1/MemoryGame/index.html
@@ -100,7 +100,7 @@
         }
 
         .card-front {
-            background-color: #c4ff00;
+            background-color: #3f3d54;
             color: white;
         }
 
@@ -111,7 +111,7 @@
         }
 
         .card-back {
-            background-color: #2ecc71;
+            background-color: #c4ff00;       
             transform: rotateY(180deg);
         }
 
