--- a/Level1/Unit1/MemoryGame/index.html
+++ b/Level1/Unit1/MemoryGame/index.html
@@ -20,7 +20,7 @@
         #back-button {
             margin-bottom: 10px;
             padding: 10px 20px;
-            background-color: #007bff;
+            background-color: black;
             color: white;
             border: none;
             border-radius: 5px;
@@ -33,7 +33,7 @@
         }
 
         #back-button:hover {
-            background-color: #0056b3;
+            background-color: #333;
         }
 
         h1 {
