--- a/Level1/Unit2/MemoryGame3/index.html
+++ b/Level1/Unit2/MemoryGame3/index.html
@@ -20,7 +20,7 @@
         #back-button {
             margin-bottom: 10px;
             padding: 10px 20px;
-            background-color: #007bff;
+            background-color: black;
             color: white;
             border: none;
             border-radius: 5px;
@@ -33,7 +33,7 @@
         }
 
         #back-button:hover {
-            background-color: #0056b3;
+            background-color: #333;
         }
 
         h1 {
@@ -100,7 +100,7 @@
         }
 
         .card-front {
-            background-color: #3498db;
+            background-color: #3f3d54;
             color: white;
         }
 
@@ -111,7 +111,7 @@
         }
 
         .card-back {
-            background-color: #2ecc71;
+            background-color: #c4ff00;       
             transform: rotateY(180deg);
         }
 
@@ -326,20 +326,26 @@
         }
 
         function flipCard() {
-            if (lockBoard) return;
-            if (this.classList.contains('flipped')) return;
+    if (lockBoard) return;
+    if (this.classList.contains('flipped')) return;
 
-            this.classList.add('flipped');
+    this.classList.add('flipped');
 
-            if (!firstCard) {
-                firstCard = this;
-                return;
-            }
+    // Se a carta tiver uma palavra, use o sintetizador de voz para lê-la
+    if (this.querySelector('.word')) {
+        const word = this.querySelector('.word').textContent;
+        speakText(word);
+    }
 
-            secondCard = this;
-            updateMoveCounter();
-            checkForMatch();
-        }
+    if (!firstCard) {
+        firstCard = this;
+        return;
+    }
+
+    secondCard = this;
+    updateMoveCounter();
+    checkForMatch();
+}
 
         function checkForMatch() {
             const isMatch = firstCard.dataset.pair === secondCard.dataset.pair;
@@ -459,6 +465,13 @@
             gameContainer.innerHTML = '';
             loadCardsData(initGame);
         }
+
+function speakText(text) {
+    const synth = window.speechSynthesis;
+    const utterance = new SpeechSynthesisUtterance(text);
+    utterance.lang = 'en-US'; // Configura o idioma como inglês americano
+    synth.speak(utterance);
+}
 
         loadCardsData(initGame);
         window.addEventListener('resize', adjustFontSize);
