--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -377,6 +377,11 @@
         activityDiv.appendChild(wordContainer);
         activityContainer.appendChild(activityDiv);
         activities.push(word);
+        const fullWordElement = document.createElement('div');
+        fullWordElement.innerText = word.toUpperCase();
+        fullWordElement.style.fontWeight = 'bold';
+        fullWordElement.style.marginTop = '10px';
+        wordContainer.appendChild(fullWordElement);
     }
 
     function showCompletionModal() {
