--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -263,7 +263,10 @@
                     doc.text("_____", xPos, yOffset + 10);
                     xPos += 15;
                 });
-                yOffset += 40;
+                yOffset += 10; // Adiciona uma pequena margem abaixo dos traços
+                    doc.setFontSize(14);
+                    doc.text(word.toUpperCase(), 50, yOffset);
+                yOffset += 30; // Ajusta o espaço para a próxima atividade
             }
         });
 
