--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -263,9 +263,11 @@
                     doc.text("_____", xPos, yOffset + 10);
                     xPos += 15;
                 });
+
+                // Adiciona a palavra completa abaixo dos traços
                 yOffset += 10; // Adiciona uma pequena margem abaixo dos traços
-                    doc.setFontSize(14);
-                    doc.text(word.toUpperCase(), 50, yOffset);
+                const word = activity.querySelector('.missing-word').textContent;
+                doc.text(word.toUpperCase(), 50, yOffset);
                 yOffset += 30; // Ajusta o espaço para a próxima atividade
             }
         });
