--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -266,8 +266,11 @@
 
                 // Adiciona a palavra completa abaixo dos traços
                 yOffset += 10; // Adiciona uma pequena margem abaixo dos traços
-                const word = activity.querySelector('.missing-word').textContent;
-                doc.text(word.toUpperCase(), 50, yOffset);
+                const fullWordElement = wordContainer.querySelector('div:last-child');
+                if (fullWordElement) {
+                    const fullWord = fullWordElement.textContent.trim();
+                    doc.text(fullWord, 50, yOffset);
+                }
                 yOffset += 30; // Ajusta o espaço para a próxima atividade
             }
         });
