--- a/Level1/Unit1/Missing Word/index.html
+++ b/Level1/Unit1/Missing Word/index.html
@@ -257,6 +257,7 @@
 
             const wordContainer = activity.querySelector('.word-container');
             if (wordContainer) {
+                // Adiciona os traços das letras faltantes
                 doc.setFontSize(14);
                 let xPos = 50;
                 wordContainer.querySelectorAll('.missing-letter-input').forEach(() => {
@@ -265,13 +266,13 @@
                 });
 
                 // Adiciona a palavra completa abaixo dos traços
-                yOffset += 10; // Adiciona uma pequena margem abaixo dos traços
+                yOffset += 20; // Ajusta o yOffset para mover a palavra completa para baixo das linhas
                 const fullWordElement = wordContainer.querySelector('div:last-child');
                 if (fullWordElement) {
                     const fullWord = fullWordElement.textContent.trim();
                     doc.text(fullWord, 50, yOffset);
                 }
-                yOffset += 30; // Ajusta o espaço para a próxima atividade
+                yOffset += 40; // Ajusta o espaço para a próxima atividade
             }
         });
 
