--- a/Level1/Unit1/Testword/index.html
+++ b/Level1/Unit1/Testword/index.html
@@ -336,6 +336,13 @@ function createActivity(imageUrl, word) {
     wordInput.placeholder = "Type the word here";
     wordContainer.appendChild(wordInput);
 
+    // Adiciona a palavra completa em letras maiúsculas e negrito abaixo do campo de entrada
+    const fullWordElement = document.createElement('div');
+    fullWordElement.innerText = word.toUpperCase();
+    fullWordElement.style.fontWeight = 'bold';
+    fullWordElement.style.marginTop = '10px';
+    wordContainer.appendChild(fullWordElement);
+
     activityDiv.appendChild(wordContainer);
     activityContainer.appendChild(activityDiv);
 }
