--- a/Level1/Unit1/Testword1/index.html
+++ b/Level1/Unit1/Testword1/index.html
@@ -336,6 +336,13 @@ function createActivity(imageUrl, word) {
     wordInput.placeholder = "Type the word here";
     wordContainer.appendChild(wordInput);
 
+    // Adiciona a palavra completa em letras maiúsculas e negrito abaixo do campo de entrada
+    const fullWordElement = document.createElement('div');
+    fullWordElement.innerText = word.toUpperCase();
+    fullWordElement.style.fontWeight = 'bold';
+    fullWordElement.style.marginTop = '10px';
+    wordContainer.appendChild(fullWordElement);
+
     activityDiv.appendChild(wordContainer);
     activityContainer.appendChild(activityDiv);
 }
@@ -417,9 +424,9 @@ function saveGradeToDatabase(grade) {
             const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
             // Atualiza a nota, independente de já existir uma
-            dbRef.update({ nota3: grade })
+            dbRef.update({ nota2: grade })
                 .then(() => console.log("Nota salva com sucesso."))
-                .catch(error => console.error("Erro ao salvar a nota3:", error));
+                .catch(error => console.error("Erro ao salvar a nota2:", error));
         } else {
             console.error("Usuário não autenticado.");
         }
@@ -432,7 +439,7 @@ function loadExistingGrade() {
         if (user) {
             const userId = user.uid;
             const { level, unit } = getLevelAndUnitFromURL();
-            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/nota3`);
+            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/nota2`);
 
             dbRef.once('value').then((snapshot) => {
                 const existingGrade = snapshot.val();
