--- a/Level2/index.html
+++ b/Level2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Select a Unit - Level A</title>
+    <title>Select a Unit - Level B</title>
     <link rel="stylesheet" href="../CSS/styles.css">
     <style>
         .map-container {
