--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
             display: inline-block;
         }
 
+        .level0 { background-image: url('imagens/Level0_button.png'); }
         .levelA { background-image: url('imagens/levelA.png'); }
         .levelB { background-image: url('imagens/levelB.png'); }
         .levelC { background-image: url('imagens/levelC.png'); }
         .levelD { background-image: url('imagens/levelD.png'); }
-
+        
         /* Estilo da caixa de login */
         .login-container {
             display: flex;
@@ -152,6 +153,7 @@
         <main>
             <h2>Choose your level</h2>
             <div class="levels">
+                <a href="Level0/index.html" class="level-button level0" id="Level0"></a>
                 <a href="Level1/index.html" class="level-button levelA" id="Level1"></a>
                 <a href="Level2/index.html" class="level-button levelB" id="Level2"></a>
                 <a href="Level3/index.html" class="level-button levelC" id="Level3"></a>
