--- a/painel_professor.html
+++ b/painel_professor.html
@@ -451,6 +451,7 @@
           <p onclick="toggleStudentActions('${studentId}')" class="student-link">${studentData.nome} ${!isAttached ? '<span class="inactive-msg">The student left the class</span>' : ''}</p>
           <div id="student-actions-${studentId}" class="student-actions">
             <select ${!isAttached ? 'disabled' : ''} onchange="updateStudentLevel('${teacherId}', '${classId}', '${studentId}', this.value)">
+              <option value="Level0" ${studentData.nivel_em_curso === 'Level0' ? 'selected' : ''}>Level 0</option>
               <option value="Level1" ${studentData.nivel_em_curso === 'Level1' ? 'selected' : ''}>Level 1</option>
               <option value="Level2" ${studentData.nivel_em_curso === 'Level2' ? 'selected' : ''}>Level 2</option>
               <option value="Level3" ${studentData.nivel_em_curso === 'Level3' ? 'selected' : ''}>Level 3</option>
